[RORDEV-589] Improved Test configuration API implementation (#779)
